--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,13 @@
 .App-link {
   color: #61dafb;
 }
+
+.playlists{
+  width: 80%
+}
+
+@media screen and (min-width: 768px) {
+  .playlists {
+    width: 60%
+  }
+}
