--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,54 @@
-.App {
+#App {
+  background-color: #282c34;
+  min-height: 100vh;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 20vmin;
+#AppLogo {
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#AppHeader {
+  height: 15vh;
+  width: 100vw;
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+}
+
+#Login{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.playlists{
-  width: 80%
+.playlists {
+  width: 80%;
 }
 
 @media screen and (min-width: 768px) {
   .playlists {
-    width: 60%
+    width: 60%;
   }
+}
+
+.loading {
+  width: 100%;
+  background-color: #282c34;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+}
+
+.fullscreen {
+  width: 100vw;
+  height: 100vh;
 }
