--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,17 @@
 
 #AppLogo {
   pointer-events: none;
+  max-height: 10rem;
 }
 
 #AppHeader {
   height: 15vh;
-  width: 100vw;
   display: flex;
   justify-items: center;
   justify-content: center;
 }
 
-#Login{
+#Login {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -31,6 +31,10 @@
 
 .playlists {
   width: 80%;
+}
+
+.list-group {
+  border-radius: 8px !important;
 }
 
 @media screen and (min-width: 768px) {
